# clang-format-docs

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  LICENSE_blacken_docs  README.md  clang_format_docs.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
tests/: test_clang_format_docs.py  test_clang_formatten_docs.py
