[metadata]
name = clang_format_docs
version = 0.2.2
description = Run `clang-format` on C++ code blocks in documentation files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/clang-format-docs
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
license_file = LICENSE
license_files =
    LICENSE_blacken_docs
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = clang_format_docs
install_requires =
    clang-format
python_requires = >=3.7

[options.entry_points]
console_scripts =
    clang-format-docs=clang_format_docs:main

[options.extras_require]
dev =
    build
    bump2version
    ipython
    pdbpp
    pre-commit
    twine
    wheel
test =
    pre-commit
    pytest
    pytest-cov

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[tool:pytest]
addopts = --cov=clang_format_docs --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests
